# dg

./: .celeryd.swp  .gitignore  README.md  celerddd.sh  celery  celery.service  celerybeat  celerybeat.service  celeryd  manage.py  nginx  plotestert.py  pyproject.toml  requirements.txt
cfdns/: apps.py  creator.py  example.ini  exconf.py  models.py  settings.ini  tasks.py  views.py
cfdns/python-cloudflare/examples/: example_zones.py  g.py
dolphin/: apps.py  check_status.py  dolphin_logic.py  models.py  tasks.py
farming/: apps.py  models.py
fbprofiles/: apps.py  models.py
gologin_app/: admin.py  apps.py  gologin_logic.py  models.py  p.py  pppp  tasks.py
gologin_app/gologin_6165888cb61f167405551ddd/Default/: Cookies
gologin_app/gologin_6165888cb61f167405551ddd/gologin_6165888cb61f167405551ddd/: Local State
gologin_app/gologin_6165888cb61f167405551ddd/gologin_6165888cb61f167405551ddd/Default/: History Provider Cache  Network Persistent State  Preferences
idgenerator/: admin.py  apps.py  back  forms.py  models.py  urls.py  views.py
indigo/: admin.py  apps.py  forms.py  in.py  models.py  oooo.py  tasks.py  test_indigo.py  urls.py  views.py
plow/: blow.py.back  create_sing.py  creator.py  creator_zipper.py  ebalo_croper.py  plow.py  pu.py  rand_let.py  randomsing.py  remove_bg.py  trim_white.py
plow/addons/: bg.py  f.py  p.py  s.py  tt.py
request_da/: request_data.py
source_podliver/: admin.py  asgi.py  celery.py  settings.py  urls.py  wsgi.py
templates/: ii.html  return_doc.html
templates/admin/: plower.html
templates/app/: base.html  set.html
(+3 files in other folders)
